--- a/index.html
+++ b/index.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Secret Agent Supply Inc.</title>
-    <link rel="stylesheet" href="resources/css/style.css">
-    <link rel="stylesheet" href="resources/css/reset.css">
-  </head>
-    <body>
+    <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+</head>
+<!-- Header with company logo -->
 
-  </body>
+<body>
+    <div class="company">
+        <div class="container">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png">
+            <span>SECRET AGENT SUPPLY INC.</span>
+        </div>
+    </div>
+    <!-- Main Banner -->
+    <div class="main-banner">
+        <div class="container">
+            <div class="headline">
+                <h4>NEW ARRIVAL</h4>
+                <h1>SPORT BIKES AND MOTORCYCLES</h1>
+            </div>
+        </div>
+        <!-- Nav bar -->
+        <nav>
+            <ul class="container">
+                <li>Eyewear</li>
+                <li>Apparel</li>
+                <li>Gadgets</li>
+                <li>Vehicles</li>
+                <li>Classes</li>
+                <li>Contact</li>
+            </ul>
+            <ul class="mobile-nav container">
+                <li>Menu</li>
+            </ul>
+        </nav>
+        <!-- Products & Business info -->
+        <div class="container">
+            <div class="products">
+                <div class="product">
+                    <div class="product-image">
+                        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png">
+                    </div>
+                    <span class="discription">Exploding Pen</span>
+                </div>
+                <div class="product watch">
+                    <div class="product-image">
+                        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png">
+                    </div>
+                    <span class="discription">Cellular Watch</span>
+                </div>
+                <div class="product glasses">
+                    <div class="product-image">
+                        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png">
+                    </div>
+                    <span class="discription">Thermal Glasses</span>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="business-info">
+                <div class="info">
+                    <span class="title">Location</span>
+                    <span>-47.346436, 84.32354</span>
+                </div>
+                <div class="info">
+                    <span class="title">Hours</span>
+                    <span>0800 - 1800</span>
+                </div>
+            </div>
+        </div>
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                Copyright Secret Agent Supply Inc.
+            </div>
+        </footer>
+</body>
+
 </html>
