--- a/index.html
+++ b/index.html
@@ -24,61 +24,76 @@
                 <h1>SPORT BIKES AND MOTORCYCLES</h1>
             </div>
         </div>
-        <!-- Nav bar -->
-        <nav>
-            <ul class="container">
-                <li>Eyewear</li>
-                <li>Apparel</li>
-                <li>Gadgets</li>
-                <li>Vehicles</li>
-                <li>Classes</li>
-                <li>Contact</li>
-            </ul>
-            <ul class="mobile-nav container">
-                <li>Menu</li>
-            </ul>
-        </nav>
-        <!-- Products & Business info -->
-        <div class="container">
-            <div class="products">
-                <div class="product">
-                    <div class="product-image">
-                        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png">
-                    </div>
-                    <span class="discription">Exploding Pen</span>
+    </div>
+    <!-- Nav bar -->
+    <nav>
+        <ul class="container">
+            <li>
+                <a href="#eyewear">Eyewear</a>
+            </li>
+            <li>
+                <a href="#apparel">Apparel</a>
+            </li>
+            <li>
+                <a href="#gadgets">Gadgets</a>
+            </li>
+            <li>
+                <a href="#vehicles">Vehicles</a>
+            </li>
+            <li>
+                <a href="#classes">Classes</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+        <ul class="mobile-nav container">
+            <li>
+                <a href="#menu">Menu</a>
+            </li>
+        </ul>
+    </nav>
+    <!-- Products & Business info -->
+    <div class="container">
+        <div class="products">
+            <div class="product">
+                <div class="product-image">
+                    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png">
                 </div>
-                <div class="product watch">
-                    <div class="product-image">
-                        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png">
-                    </div>
-                    <span class="discription">Cellular Watch</span>
+                <span class="discription">Exploding Pen</span>
+            </div>
+            <div class="product watch">
+                <div class="product-image">
+                    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png">
                 </div>
-                <div class="product glasses">
-                    <div class="product-image">
-                        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png">
-                    </div>
-                    <span class="discription">Thermal Glasses</span>
+                <span class="discription">Cellular Watch</span>
+            </div>
+            <div class="product glasses">
+                <div class="product-image">
+                    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png">
                 </div>
+                <span class="discription">Thermal Glasses</span>
             </div>
         </div>
-        <div class="container">
-            <div class="business-info">
-                <div class="info">
-                    <span class="title">Location</span>
-                    <span>-47.346436, 84.32354</span>
-                </div>
-                <div class="info">
-                    <span class="title">Hours</span>
-                    <span>0800 - 1800</span>
-                </div>
+    </div>
+    <div class="container">
+        <div class="business-info">
+            <div class="info">
+                <span class="title">Location</span>
+                <span>-47.346436, 84.32354</span>
+            </div>
+            <div class="info">
+                <span class="title">Hours</span>
+                <span>0800 - 1800</span>
             </div>
         </div>
-        <!-- Footer -->
-        <footer>
-            <div class="container">
-                Copyright Secret Agent Supply Inc.
-            </div>
-        </footer>
+    </div>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            © Copyright Secret Agent Supply Inc.
+        </div>
+    </footer>
 </body>
 
 </html>
